amf-cli/shared/src/test/resources/parser-results/raml/valid/numeric-key-in-external-fragment/api.raml
#%RAML 0.8

title: ESB Costumers

/cards:
    get:
      responses: !include get-cards-code-resp.raml