amf-cli/shared/src/test/resources/parser-results/raml/error/invalid-number-format/api.raml
#%RAML 0.8
title: test
mediaType: application/json
schemas:
  - pdfdocument-jsonschema: !include schemas/v1/pdfdocument-jsonschema.json